--- a/MyWpfCoreExcelImport/Properties/Settings.settings
+++ b/MyWpfCoreExcelImport/Properties/Settings.settings
@@ -11,5 +11,11 @@
     <Setting Name="TableName" Type="System.String" Scope="User">
       <Value Profile="(Default)">TestTable</Value>
     </Setting>
+    <Setting Name="DBName" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="ExcelTabIndex" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
