--- a/MyWpfCoreExcelImport/MyWpfCoreExcelImport.csproj
+++ b/MyWpfCoreExcelImport/MyWpfCoreExcelImport.csproj
@@ -7,6 +7,7 @@
     <UseWPF>true</UseWPF>
     <UseWindowsForms>true</UseWindowsForms>
     <AssemblyVersion>1.1.0.0</AssemblyVersion>
+    <FileVersion>1.1.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
