--- a/MyWpfCoreExcelImport/Properties/Settings.settings
+++ b/MyWpfCoreExcelImport/Properties/Settings.settings
@@ -2,8 +2,8 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="MyWpfCoreExcelImport.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="ConnectionString" Type="System.String" Scope="User">
-      <Value Profile="(Default)">Server = localhost; Database = TestDB; Trusted_Connection = true</Value>
+    <Setting Name="DefaultConnectionString" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Server = .\SQLEXPRESS; Database = TestDB; Trusted_Connection = true</Value>
     </Setting>
     <Setting Name="ExcelFile" Type="System.String" Scope="User">
       <Value Profile="(Default)">..\\..\\..\\..\\TestData\\TestData.xlsx</Value>
